# phd-projects

./: .gitignore  LICENSE  README.md  transformer_summarizer.ipynb  transformer_text_classification_demo.py
Advanced-Generative-Computing-Systems-827142/Course-Project/sarcasm-detection/: .gitignore  README.md  project_report.md  project_summary.md  pyproject.toml  requirements.txt
Advanced-Generative-Computing-Systems-827142/Course-Project/sarcasm-detection/configs/: amazon_distilbert.yaml  amazon_roberta.yaml  reviews_distilbert.yaml  reviews_roberta.yaml
Advanced-Generative-Computing-Systems-827142/Course-Project/sarcasm-detection/data/raw/: reviews.csv
Advanced-Generative-Computing-Systems-827142/Course-Project/sarcasm-detection/docs/: project_report.md
Advanced-Generative-Computing-Systems-827142/Course-Project/sarcasm-detection/src/sarcasm_judge/: __init__.py  cli.py  config.py  data.py  inference.py  metrics.py  modeling.py  splits.py  templates.py  train.py
Advanced-Generative-Computing-Systems-827142/Course-Project/sarcasm-detection/tests/: test_data.py  test_metrics.py  test_train.py
Pattern-Recognition-708508/Course-Project/hsi-analysis/: .gitignore  README.md  pyproject.toml
Pattern-Recognition-708508/Course-Project/hsi-analysis/data/: sample.hdr  sample.raw
Pattern-Recognition-708508/Course-Project/hsi-analysis/docs/: implementation_plan_a.md  task.md  walkthrough_a.md
Pattern-Recognition-708508/Course-Project/hsi-analysis/docs/walkthroughs/: cube-info.md  (+4 more)
Pattern-Recognition-708508/Course-Project/hsi-analysis/tests/: __init__.py  test_cli.py
(+65 files in other folders)
