[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sarcasm-judge"
version = "0.1.0"
description = "Supervised fine-tuning pipeline for LLM-as-a-judge sarcasm detection."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
sarcasm_judge = "sarcasm_judge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

