[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsi-analysis"
version = "0.1.0"
description = "A CLI tool for analyzing hyperspectral images from ENVI format files"
readme = "README.md"
authors = [
    { name = "Shahid Nauman" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
hsi-analysis = "hsi_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
